# ChangeLog for app-admin/mms-agent
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/ChangeLog,v 1.5 2015/06/25 11:10:48 ultrabug Exp $

*mms-agent-3.5.0.197_p1 (25 Jun 2015)

  25 Jun 2015; Ultrabug <ultrabug@gentoo.org> -mms-agent-3.3.0.183_p1.ebuild,
  +mms-agent-3.5.0.197_p1.ebuild:
  version bump

*mms-agent-3.3.0.183_p1 (12 May 2015)

  12 May 2015; Ultrabug <ultrabug@gentoo.org> -mms-agent-3.2.0.177_p1.ebuild,
  +mms-agent-3.3.0.183_p1.ebuild, files/mms-monitoring-agent.initd:
  version bump, fix init script thx to Lujeni

*mms-agent-3.2.0.177_p1 (15 Apr 2015)

  15 Apr 2015; Ultrabug <ultrabug@gentoo.org> -mms-agent-3.1.0.175_p1.ebuild,
  +mms-agent-3.2.0.177_p1.ebuild:
  version bump

  27 Mar 2015; Ultrabug <ultrabug@gentoo.org> mms-agent-3.1.0.175_p1.ebuild:
  missing mongodb user creation fix #544548 thx to Toralf Förster

*mms-agent-3.1.0.175_p1 (17 Mar 2015)

  17 Mar 2015; Ultrabug <ultrabug@gentoo.org> +mms-agent-3.1.0.175_p1.ebuild,
  +files/mms-monitoring-agent.initd, +metadata.xml:
  app-admin/mms-agent ebuild
