@@ -2,15 +2,15 @@
 Hash: SHA256
 
 AUX mms-monitoring-agent.initd 705 SHA256 cb08a69f940f89d41f1690287eaaaa3ebfa5b6eab15ebd18a732b0e6f373203b SHA512 20c158f2feb5c4e4a6175b3a06f5a7635cc585e919076931df6eb83d91c682b9f2f3b51472487fced676811475c56041bea9eec232c5ff33f0aa6ebf7598d4cc WHIRLPOOL 4e66a289ca971d7717d45838d95d6ec4abeb9eb0e36d053b7297fa4d4db88514ea4c97d9cf05604cf67e764af43ae25020f4cb46cf5430084abea169c8c0fd4f
-DIST mongodb-mms-monitoring-agent-3.5.0.197-1.linux_i386.tar.gz 2551351 SHA256 c84444627a842a1f0b1dbb40b3af4923bf7c6a9d183e84c38af63d4b7a17da37 SHA512 211fb886eb14eaea3afa0cb6824c7e3c793bc59f29d19e5d2e424b069d3d5c441d04bdf79d71bca4584d9867bb0330a24bba31ca0faf56581c9267976afd19b4 WHIRLPOOL ff58d9b90dec89baa308fc240e445ec64f1f63722be10471a3c3a8e32abdd8634d114990adb1b61161cba2043bd7e8c27af0dc911393fbe989632f52e42e4c46
-DIST mongodb-mms-monitoring-agent-3.5.0.197-1.linux_x86_64.tar.gz 2639940 SHA256 458acc069c2e3f38e6c7883d07a21883e7e9242c50a9d2748cd489ad6459f7d3 SHA512 f3b4e250a9c61f042dd948220831797293851224509e0e24d1603f919d5d5d8a1489df0f999a99342585e8e735c9e1fa938957361688387a350eccc03a6e4b48 WHIRLPOOL 0acf537347b27a13d9007b41cdb02c2608b2d61703c302f95fd2a6fb93b3c0cf6ab1940ee835113266f08faa5e3ef6cf1cff547155831e2eecd76bb30b52ef7f
-EBUILD mms-agent-3.5.0.197_p1.ebuild 1628 SHA256 deb77134c9d01b960202bebc00dc42309c3a6f9f77e63907415d710e8d8c8067 SHA512 22b50092cb561d03a290df781bfde445f6b6ca6f1e19be46726da65b80fe918ec0c503688fe5807c1d76a795517191fd33d033e219d5bd7d5baddf9935746456 WHIRLPOOL 1e08d26309a554f4cc39ab8e9590d200ec25a49e1bd90f052ea8fbf5019f44188ce9f45513a1b4e6758b08a70c51b3dab0386c89e8ee794cd3ef6b39831ad47c
-MISC ChangeLog 1123 SHA256 645fde002168f707854123e4275e05efb1d733aca667231b642acb9eab7261b1 SHA512 a7dd36e1784ac3ef067704a714911a73b96d92dd15a5cf0ac114c7df4d9e2fc8d6b39c2cb16e137279f8dd4250de142fcf157222d8712756cc606e69b7a0235b WHIRLPOOL a3c88c196ed2cd6b6c7efd46c4df9dd0e9dc88d87f6d32dd42d801f8f86c6c615112e604a079daad1bc1980d57ac2bb5be7e9b6e7665381d7f1800f900551664
+DIST mongodb-mms-monitoring-agent-3.6.0.201-1.linux_i386.tar.gz 2553004 SHA256 c63e230b3ca831e3b5b946b73b90f3b5f643dfb78342a6f98917810a45d5f0c0 SHA512 e9497afb09c41de287b7c834ae4ac06623ac157e2c81c5f05aaf185dfc6beb3951a2261460c3217cd98de23c3f1513f5613ed51c6d0235a673062b50b72a3e61 WHIRLPOOL 29251dc975a247611c9711cf894ce43cd1fe35cc50f4a1f91d23c514119803dd2e12c100e990311b87b64b779cce4a1c95e13c4cef7248f4f2b52403e6ffd59d
+DIST mongodb-mms-monitoring-agent-3.6.0.201-1.linux_x86_64.tar.gz 2641790 SHA256 5701e21e1243ddd2c4922251d207fbbfa5d6f328c30a9735818691d105459e75 SHA512 b73b3bb0042a13822c54b2af7b3933b9d43b4d4582206acbe6f64476b35b385ee89071f2691c2ecf1f80d8fb52fffc7010b7e9009ee8939c48c54d60b57153e7 WHIRLPOOL fb68a95b861a2bda67cdfe561249b9c73d70d4b0c120735c6118e54c9e69e7938c312b72441b21b2c6ea12d120bcfceee539de46e33fdfeef9db351fcab2c8b2
+EBUILD mms-agent-3.6.0.201_p1.ebuild 1628 SHA256 7d86d2fe8cc7f5847b0ef8f0cdf1fb3383ac62912579d89f4ff60877e2ac08f9 SHA512 ee291ad731592a317dd1cf6ce34d159348dc5e5d9a9b44494d2d64770b4aa56cc2003e79a9d4ea32e77cb774073ce093300a9693b82655b75961cdc395790726 WHIRLPOOL 81264372a1557b9a05e8bb4ee23333152ca1b37e8738d92a4d06ef39e679361912e7974dfac69154d7aa0d687b26b3179fc08f79069bdd221293f6b4b1d1b7a3
+MISC ChangeLog 1300 SHA256 9aa3518cc5e198accecbd5b67ae1e26e061d984dce7022c386f0a409d8ab0bd4 SHA512 f2e21dcb71b69b9b9737cdbfd2044917bce09a3bc735d70e4e6aebb5aa5224342b5e9a051959215fafe2884ea62d6798daea4d985af9bbda9698be74dd10a8fc WHIRLPOOL 17e66411394f517f97ef53e517451eeb8ff5a461468116b48b5cebf12a074eaea360be2ed2c4ab87edaf69d96e0f80924633d97cf5bc455b978ddac6c6d59cc1
 MISC metadata.xml 579 SHA256 4eb5e4cd7f2fbd47621a7f77bb0a6ee0e3a6aa6eb57ba079f8704df17249472f SHA512 0b4318c4cd5958a74b24b660888f26e43ba5666ab8c4349d11b8da85255d39c8fe7b476c90be0eb31ae5c13ab783c76421176d26e63c09bc6176df3a62335dc8 WHIRLPOOL 0a5d1e7dbf60d130ef28be028a5901ab3f2f2a5e1324b54bb023e9f7127b737c3b36fe76baf57c93df8a769331d14b7a26aff98975f92aa621b3fc8f54cb5541
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlWL4bkACgkQKiQSS7ZY+hN0xwD6A3LHnq/1wYY+MkiUCT27MpAm
-139qQ/JzLRgpMiAbWvoBAMAm3kDnnkpFHenoZLFHkl/6cSb44PhL7bErauOp4wRA
-=6upV
+iF4EAREIAAYFAlXBy5sACgkQKiQSS7ZY+hMsswD/SdjdSfN+MjPGPzWX41UE08Gg
+vqbjBWlfNJkkcaQ8bTcA/jSOAVH+AXitb9e7Ge81twA6+KEgyYKyC7l0sG/05jy3
+=R4Kw
 -----END PGP SIGNATURE-----
