@@ -2,15 +2,15 @@
 Hash: SHA256
 
 DIST qtchooser-0_p20150102.tar.xz 30936 SHA256 7b6d622d3a57a1467c57b4ca368220540085698cb7ad226ed782931599e85757 SHA512 15e08f1aaa22ba45d41adda57b9da76f3667d15ab92448b6a95b44287e5043fcae368ddcea1e2b84565d3a96edacbcd68bc515054ffaa81dde4064c9a992dbae WHIRLPOOL 4617444cf9764a82f10f3ff8fdf1102d9c5fdd76c77966c661a5256a98221117696ffccf83ed5b961a53d7b5ff5e0a7f6454627a6ab43427583edf9e3660a1bb
-EBUILD qtchooser-0_p20150102.ebuild 1682 SHA256 594fd7dd3d377e3d65caf973e9ea03543e82b300789d00075c42d349adecb013 SHA512 79766794322003637dd92c3c6a150096e43877e48e547698b218ddab15b84597c3b504c91677f0f46b33dfebbf73f914bbb0b63500262a66e1a9a32c7c354f69 WHIRLPOOL ee55df828010981cf1f1c5bcafca812489702c84fff182f3ed0485b1e1aa47e3c1878a279598109fb3241654d66eb8a523271e616aa636f1adfd3178f6b8d492
-MISC ChangeLog 1901 SHA256 50bba8f2f010736219159d02177674cd3cc5d59fa22783be17fd3b2207072b1f SHA512 75af5d5e2b084e9ab18b444fb6f152fe3f5539dcdc54e2620547336bcf38a79cf0f11ccedba8a00d527cf8ae01be8ed18aeeb6828f07d01466c30c2fc9e4d146 WHIRLPOOL 07506831a4fbe5e4a846d0af1426cc913b53c2f3f0d85d42985d9ce07648eb22aa404dfdc3e715069eff6d6cfd0d22470c085c71ad86a6c1f0a940d8df32e79c
+EBUILD qtchooser-0_p20150102.ebuild 1687 SHA256 aad1e7c0d155096180375bff4f7011beb0167b20c447b6103dd8f67edbb2989f SHA512 241c702cc880b805111d7bbff497d3cbf98daa8e91ec192ca4a6046e3ecadb1131443fd838ed0a3120dc078ab9b9dc71cdb6982867f919aad4982304eec2f531 WHIRLPOOL 9e1bea08da3d17d77d9114b068703838d68b6eec5536fb138b6f1de55188aaa1346fde9ff29581b2f8e88e5b05eb13827566ce3709165d2a11d200df8cb22eb9
+MISC ChangeLog 2013 SHA256 c9fe43a3fc3ed04f3ddc9769bad71c427535f039b06e30b8c71b8fd6707abb13 SHA512 265d58f6b5472f148478bdd2d290006c4ac0db2adfb00ca35f05a7ce0a9f9506a05eb6ac16fc8d23fff883fb59e07ef057d15942700dd53b3b3f7ad4a8985a64 WHIRLPOOL 2c23003c4011b60abae55f1343f5b8169bdcabe597323a12cbd8e44fdd3137d7b203afd3d51d84a2521e95180de5c73e8b904ecb416eaec2c0223db274951596
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iKYEAREIAGYFAlWZMw5fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOhGcgCdEzl2uKI43yQzrHTlaXpX6/gs
-4EsAn0p1MZMAA3MIOg0R/Rxwl608wEtV
-=+a7q
+iJwEAQEIAAYFAlXBza0ACgkQG9wOWsQutdZz+AP+K7gq/uFUQqF73T+NRGsAzc6i
+t6nZ4ZxkqjHrFTTPKpFN5RvgjUESzRzpHKg39zjxQOqT2gExV2aZHkjKAKYbmahY
+h1ROfbcVt/mfwGDADo/o85AWjaGB3OS9SjaJddJ3dp5wt4+53QFpLtJPM/DSkZD1
+Gjj9IqzQYRSY5Evfq8M=
+=ML4+
 -----END PGP SIGNATURE-----
