@@ -9,6 +9,6 @@ LICENSE=Apache-2.0
 RDEPEND=!<dev-db/mongodb-3.0.0[mms-agent]
 REQUIRED_USE=|| ( monitoring )
 SLOT=0
-SRC_URI=monitoring? ( amd64? ( https://mms.mongodb.com/download/agent/monitoring/mongodb-mms-monitoring-agent-3.5.0.197-1.linux_x86_64.tar.gz ) x86? ( https://mms.mongodb.com/download/agent/monitoring/mongodb-mms-monitoring-agent-3.5.0.197-1.linux_i386.tar.gz ) )
+SRC_URI=monitoring? ( amd64? ( https://mms.mongodb.com/download/agent/monitoring/mongodb-mms-monitoring-agent-3.6.0.201-1.linux_x86_64.tar.gz ) x86? ( https://mms.mongodb.com/download/agent/monitoring/mongodb-mms-monitoring-agent-3.6.0.201-1.linux_i386.tar.gz ) )
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=0a8080f6ab66f0b32a382f4831c800cc
+_md5_=573a69beea51397e3e0f6e1aa60339fd
