@@ -4,10 +4,10 @@ DESCRIPTION=Qt4/Qt5 version chooser
 EAPI=5
 HOMEPAGE=https://qt.gitorious.org/qt/qtchooser
 IUSE=qt5 test
-KEYWORDS=alpha amd64 arm ~arm64 hppa ~mips ppc ppc64 x86
+KEYWORDS=alpha amd64 arm ~arm64 hppa ia64 ~mips ppc ppc64 x86
 LICENSE=|| ( LGPL-2.1 GPL-3 )
 RDEPEND=!<dev-qt/assistant-4.8.6:4 !<dev-qt/designer-4.8.6:4 !<dev-qt/linguist-4.8.6:4 !<dev-qt/pixeltool-4.8.6:4 !<dev-qt/qdbusviewer-4.8.6:4 !<dev-qt/qt3support-4.8.6:4 !<dev-qt/qtbearer-4.8.6:4 !<dev-qt/qtcore-4.8.6:4 !<dev-qt/qtdbus-4.8.6:4 !<dev-qt/qtdeclarative-4.8.6:4 !<dev-qt/qtdemo-4.8.6:4 !<dev-qt/qtgui-4.8.6:4 !<dev-qt/qthelp-4.8.6:4 !<dev-qt/qtmultimedia-4.8.6:4 !<dev-qt/qtopengl-4.8.6:4 !<dev-qt/qtopenvg-4.8.6:4 !<dev-qt/qtphonon-4.8.6:4 !<dev-qt/qtscript-4.8.6:4 !<dev-qt/qtsql-4.8.6:4 !<dev-qt/qtsvg-4.8.6:4 !<dev-qt/qttest-4.8.6:4 !<dev-qt/qtwebkit-4.8.6:4 !<dev-qt/qtxmlpatterns-4.8.6:4
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~pesa/distfiles/qtchooser-0_p20150102.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	qmake-utils	4ce40e37ef0e28425a7159b0353be026	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=7bda1604bd28cde8d551a86f3fb0c013
+_md5_=e18c3df2eac94db980aa0b4ab42da2cd
