@@ -1,6 +1,9 @@
 # ChangeLog for dev-qt/qtchooser
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtchooser/ChangeLog,v 1.14 2015/07/05 13:37:17 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtchooser/ChangeLog,v 1.15 2015/08/05 08:49:58 zlogene Exp $
+
+  05 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> qtchooser-0_p20150102.ebuild:
+  QA: ia64 stable (bug #529196)
 
   05 Jul 2015; Tobias Klausmann <klausman@gentoo.org>
   qtchooser-0_p20150102.ebuild:
